# EliteBridge-ClientWindow-New

AuxForUtility/: AuxDB
AuxForUtility/AuxElite/: CMakeLists.txt  auxelite.cpp  auxelite.h  auxelite.ui  main.cpp
AuxForUtility/build-AuxElite-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
AuxForUtility/build-AuxElite-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/AuxElite_autogen/: deps  mocs_compilation.cpp
AuxForUtility/build-AuxElite-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/AuxElite_autogen/EWIEGA46WW/: moc_auxelite.cpp  moc_auxelite.cpp.d
AuxForUtility/build-AuxElite-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/AuxElite_autogen/include/: ui_auxelite.h
Database-QT-Crud-master/Database-QT-Crud-master/: dbmanager.cpp  deleteuser.ui  exemple.db  inserdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Database-QT-Crud-master/build-appDb-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_deleteuser.h  ui_inserdata.h  ui_mainwindow.h
Database-QT-Crud-master/build-appDb-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/debug/: moc_deleteuser.cpp  moc_inserdata.cpp  moc_mainwindow.cpp
Jobs/: JobsDB
Jobs/Jobs/: CMakeLists.txt  ClickableLabel.h  jobs.cpp  jobs.h  jobs.ui  main.cpp
Jobs/build-Jobs-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Jobs/build-Jobs-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Jobs_autogen/: deps  mocs_compilation.cpp
Jobs/build-Jobs-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Jobs_autogen/EWIEGA46WW/: moc_ClickableLabel.cpp  moc_ClickableLabel.cpp.d  moc_jobs.cpp  moc_jobs.cpp.d
Jobs/build-Jobs-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Jobs_autogen/include/: ui_jobs.h
MachineSetup/: MachineDB
MachineSetup/Machine/Machine/: CMakeLists.txt  machine.cpp  machine.h  machine.ui  main.cpp
MachineSetup/Machine/build-Machine-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
MachineSetup/Machine/build-Machine-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Machine_autogen/: deps  mocs_compilation.cpp
MachineSetup/Machine/build-Machine-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Machine_autogen/EWIEGA46WW/: moc_ClickableLabel.cpp  moc_ClickableLabel.cpp.d  moc_machine.cpp  moc_machine.cpp.d
MachineSetup/Machine/build-Machine-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Machine_autogen/include/: ui_machine.h
Terminology/build-terminology-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Terminology/build-terminology-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/terminology_autogen/: deps  mocs_compilation.cpp
Terminology/build-terminology-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/terminology_autogen/EWIEGA46WW/: moc_terminology.cpp  moc_terminology.cpp.d
Terminology/build-terminology-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/terminology_autogen/include/: ui_terminology.h
Terminology/terminology/: CMakeLists.txt  main.cpp  terminology.cpp  terminology.h  terminology.ui
clientside_ui_file/: CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  elitebridge  elitedb  itembasket.cpp  itembasket.h  itembasket.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  restock.cpp  restock.h  restock.ui  restockbasket.cpp  restockbasket.h  restockbasket.ui  withdraw.cpp  withdraw.h  withdraw.ui
